--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,21 @@
 	font-style: normal;
 	font-display: swap;
 }
+
+html,
+body,
+#root {
+	height: 100%;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+}
+
+.checking {
+	overflow: hidden;
+}
